--- a/2020_CPS2004_Bugeja_Manwel_454000L_assignment_code/Task2/CMakeLists.txt
+++ b/2020_CPS2004_Bugeja_Manwel_454000L_assignment_code/Task2/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Task2)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(Task2 main.cpp ImmutableList.h ImmutableLinkedList.cpp ImmutableLinkedList.h)
+add_executable(Task2 main.cpp ImmutableList.h ImmutableLinkedList.h)
