--- a/2020_CPS2004_Bugeja_Manwel_454000L_assignment_code/Task3/CMakeLists.txt
+++ b/2020_CPS2004_Bugeja_Manwel_454000L_assignment_code/Task3/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Task3)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(Task3 main.cpp Expression.h)
+add_executable(Task3 main.cpp Expression.h Integral.h)
